# utility_codes

./: CV_Cam.py  README.md  Runge_Kutta.m  bag2img.py  bagmerge.py  bagtomp4_chatgpt.py  bbox_vis.py  cam_16bit_ros.py  compressed_to_raw.py  control_jetbot_imu.py  cpu_monitor.py  csvtobag_IMU.py  cv_cam_16bit.py  cv_cam_ros.py  cv_images_to_mp4.py  dae_line_remover.py  dataset_record.py  filename_convert.py  filename_convert2.py  gazebo_gt_pub.py  gazebo_to_path_and_path_frame.py  gt_vision_pose.py  image_GPS_log.py  image_name_converting.py  image_name_converting_and_resizing.py  image_splitter_by_chatGPT.py  images_to_rospub.py  labeling_edit.py  labeling_edit_chatGPT.py  marker_path_length.py  merge_all_bagfiles.py  mp4_to_ros.py  mp4tobag.py  nav_odometry_bag_to_txt.py  nav_path_length.py  path_bag_to_txt.py  python_terminal.py  raw_to_compressed.py  rgb2gray.py  ros_img_callback_save.py  (+13 more)
cv_cam/: CMakeLists.txt  package.xml
cv_cam/src/: cv_cam.cpp
cv_cam_ros/: CMakeLists.txt  package.xml
cv_cam_ros/launch/: cv_cam.launch
cv_cam_ros/src/: cv_cam.cpp
lio_eval_new/: README.md  calc_average.py  cpu_calct_loc_ptnum_monitor.py  dataset_auto_record_lio.py  evo_autorun.py  evo_autorun_rpe.py  livox_to_ouster.py  mulran_gt_to_tum.py  ncd_gt_to_tum.py  ntu_viral_gt_to_tum.py  run_adalio.sh  run_dlio.sh  run_dlo.sh  run_everything.sh  run_fast_lio.sh  run_genz_icp.sh  run_ig_lio.sh  run_kiss_icp.sh  run_liosam.sh  set_2022hilti_result_format.py  show_condition_number.py  subt_mrs_gt_to_tum.py
lio_eval_set/: cpu_calct_loc_ptnum_monitor.py  dataset_auto_record_lio.py  file_mover.py  folder_gen.py
lio_eval_set/matlab_hilti/: evaluate_all.m  evaluate_one.m  plot_vel_acc_bias.m
lio_eval_set_old/: calc_average.py  copy_hilti_gt_files.py  cpu_calct_loc_ptnum_monitor.py  rename_folder.py
lio_eval_set_old/matlab_hilti/: combteeth.m  evaluate_one.m  plot_localizability.m  trans_B2prism.csv
octomap_grapher/: CMakeLists.txt  package.xml
octomap_grapher/launch/: grapher.launch
octomap_grapher/src/: main.cpp
octopus/: CMakeLists.txt  package.xml
octopus/src/: main.cpp  main2.cpp  main3.cpp
