<?xml version="1.0"?>
<package format="2">
  <name>octomap_grapher</name>
  <version>0.0.0</version>
  <description>The octomap_grapher package</description>
  <maintainer email="mason@kaist.ac.kr">mason</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
